--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 h1 {
     color:purple;
+    text-align: center;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+    font-family: 'Roboto', sans-serif;
+    color: gold;
+    text-decoration: underline;
+}
+ul {
+    background-image: url("../assets/imgs/48x48userimg.svg");
+    background-size: 150px;
+    width: 200px;
+    height: 200px;
+    border: 3px solid;
+}
+ul li {
+    list-style: square;
+}
+table, th, tr, td{
+    border-style: solid;
+    border-width: 10px;
+    border-color: blue;
+    padding: 10px;
+}
+
+a:link{
+    color : palegoldenrod;
+}
+a:hover{
+    color: orangered;
+}
+a:visited{
+    color:darkviolet;
+}
+a:active{
+    color: yellowgreen;
 }
