--- a/css/weather_map.css
+++ b/css/weather_map.css
@@ -1,9 +1,43 @@
+body {
+    background: #FAF9F6;
+}
+h1{
+    display: flex;
+    justify-content: center;
+}
+
 #weather-cards {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#weather-cards > div {
+    justify-content: center;
+    margin-top: .5em;
+    margin-bottom: .5em;
 }
 
 .weather-card {
     background: #0fb784;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: calc(100% / 5);
+    height: 14em;
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+}
+
+#search-form {
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+#map {
+    margin-top: .5em;
+    margin-left: 7em;
 }
